Implement sum of three